# mx-delegation-sc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-wasm.sh  clean-wasm.sh  compile-wasm.sh  run-tests.sh  testnet.scen.json  vm-test-build-copy.sh  wabt-contracts.sh  wat-build.sh
auction-mock/: Cargo.toml  elrond.json  sc-config.toml
auction-mock/meta/: Cargo.toml
auction-mock/output/: auction-mock-dbg.mxsc.json  auction-mock.abi.json  auction-mock.hex  auction-mock.imports.json  auction-mock.mxsc.json  auction-mock.wasm  proxy.rs
auction-mock/src/: lib.rs  storage.rs
auction-mock/wasm/: Cargo.toml
debug/: Cargo.toml
debug/src/: main.rs
debug/tests/: test_bls_key_ser.rs  test_unbond_queue_ser.rs
interact/: Cargo.toml  config.toml
interact/src/: deleg_interact.rs  deleg_interact_cli.rs  deleg_interact_config.rs  latest_proxy.rs
interactor/: Cargo.toml  config.toml
interactor/src/: deleg_interactor.rs  deleg_interactor_admin.rs  deleg_interactor_cli.rs  deleg_interactor_config.rs  deleg_interactor_stats.rs  deleg_interactor_user.rs  latest_proxy.rs
latest/: Cargo.toml  sc-config.toml
latest/fuzz/: Cargo.toml
latest/meta/: Cargo.toml
latest/output/: delegation_latest_full.abi.json  delegation_latest_full.imports.json  delegation_latest_full.mxsc.json  delegation_latest_full.wasm  delegation_latest_update.abi.json  delegation_latest_update.imports.json  delegation_latest_update.mxsc.json  delegation_latest_update.wasm  proxy.rs
latest/scenarios/: activate_nodes.scen.json  claim_rewards_owner_with_stake.scen.json  governance.scen.json  unstake_tokens.scen.json  version_full.scen.json  version_update.scen.json
latest/src/: auction_proxy.rs  delegation_main.rs  events.rs  governance.rs  governance_legacy_proxy.rs  governance_sc_proxy.rs  lib.rs  node_activation.rs  reset_checkpoint_endpoints.rs  reset_checkpoint_state.rs  reset_checkpoint_types.rs  reset_checkpoints.rs  rewards.rs  rewards_endpoints.rs  rewards_state.rs  settings.rs  user_stake.rs  user_stake_dust_cleanup.rs  user_stake_endpoints.rs  user_stake_state.rs  user_unstake.rs
latest/tests/: latest_scenario_go_test.rs  latest_scenario_rs_test.rs
latest/wasm/: Cargo.toml
latest/wasm-delegation_latest_full/: Cargo.toml
latest/wasm-delegation_latest_update/: Cargo.toml
latest_full/: Cargo.toml  sc-config.toml
latest_full/abi/: Cargo.toml
latest_full/mandos/: activate_nodes.scen.json  claim_rewards_1.scen.json  claim_rewards_owner_with_stake.scen.json  claim_rewards_with_changed_service_fee.scen.json  claim_rewards_with_modify_delegation_cap.scen.json  claim_rewards_with_stake_modifications.scen.json  continue_global_operations.scen.json  decrease_cap_in_bootstrap_mode.scen.json  unjail.scen.json  unstake_2.scen.json  unstake_3.scen.json  unstake_4.scen.json  unstake_5_backwards.scen.json  version.scen.json
latest_full/meta/: Cargo.toml
latest_full/output/: delegation_latest_full.abi.json  delegation_latest_full.imports.json  delegation_latest_full.mxsc.json  delegation_latest_full.wasm
latest_full/src/: lib.rs
latest_full/tests/: v0_5_full_mandos.rs  v0_5_full_mandos_go_test.rs  v0_5_full_mandos_rs_test.rs  v0_5_full_scenario_go_test.rs  v0_5_full_scenario_rs_test.rs
latest_full/wasm/: Cargo.toml
latest_update/: Cargo.toml
latest_update/abi/: Cargo.toml
latest_update/mandos/: genesis_addr_fix.scen.json  version.scen.json
latest_update/meta/: Cargo.toml
latest_update/output/: delegation_latest_update.abi.json  delegation_latest_update.imports.json  delegation_latest_update.mxsc.json  delegation_latest_update.wasm  delegation_v0_5_2_update.wasm
latest_update/src/: lib.rs
latest_update/tests/: v0_5_update_mandos.rs  v0_5_update_mandos_go_test.rs  v0_5_update_mandos_rs_test.rs  v0_5_update_scenario_go_test.rs  v0_5_update_scenario_rs_test.rs
latest_update/wasm/: Cargo.toml
node-storage/: Cargo.toml
node-storage/debug/: Cargo.toml
node-storage/fuzz/: Cargo.toml
node-storage/src/: lib.rs  node_config.rs
staking-mock/: Cargo.toml
staking-mock/src/: lib.rs
user-fund-storage/: Cargo.toml
user-fund-storage/debug/: Cargo.toml
user-fund-storage/fuzz/: Cargo.toml
user-fund-storage/output/: delegation.hex  delegation.wasm
user-fund-storage/src/: fund_module.rs  fund_transf_module.rs  fund_view_module.rs  lib.rs  user_data.rs
user-fund-storage/tests/: fund_module_check.rs  test_high_level.rs  test_low_level.rs  test_serialization.rs
v0_3/debug/: Cargo.toml
v0_4_1_genesis/: Cargo.toml
v0_4_1_genesis/debug/: Cargo.toml
v0_4_1_genesis/output/: delegation.hex  delegation.wasm
v0_4_1_genesis/src/: genesis.rs  lib.rs  rewards.rs  settings.rs  user_stake.rs
v0_4_1_genesis/wasm/: Cargo.toml
v0_4_genesis/debug/: Cargo.toml
v0_5/: Cargo.toml
v0_5/debug/: Cargo.toml
v0_5/fuzz/: Cargo.toml
v0_5/mandos/: claim_rewards_1.scen.json  increase_delegation_cap.scen.json  staking_1.scen.json  staking_2.scen.json  unbond_and_withdraw_inactive.scen.json  unjail.scen.json  unstake_1.scen.json  unstake_3.scen.json  unstake_4.scen.json  withdraw_inactive..scen.json  withdraw_inactive.scen.json
v0_5/output/: delegation.hex  delegation.wasm
v0_5/src/: auction_proxy.rs  events.rs  extended_comp_types.rs  genesis.rs  global_checkpoint.rs  lib.rs  node_activation.rs  reset_checkpoint_types.rs  reset_checkpoints.rs  rewards.rs  settings.rs  unexpected.rs  user_stake.rs  user_unstake.rs
v0_5/wasm/: Cargo.toml
v0_5_1_full/: Cargo.toml
v0_5_1_full/mandos/: change_service_fee.scen.json  claim_rewards_1.scen.json  claim_rewards_owner_with_stake.scen.json  claim_rewards_with_changed_service_fee.scen.json  claim_rewards_with_modify_delegation_cap.scen.json  claim_rewards_with_stake_modifications.scen.json  continue_global_operations.scen.json  decrease_cap_in_bootstrap_mode.scen.json  unbond.scen.json  unjail.scen.json  unstake_3.scen.json
v0_5_1_full/output/: delegation_v0_5_1_full.hex
v0_5_1_full/src/: lib.rs
v0_5_2/: Cargo.toml
v0_5_2_full/: Cargo.toml
v0_5_init/: Cargo.toml
v0_5_update/: Cargo.toml
v0_5_x_full/: Cargo.toml
(+770 files in other folders)
