[package]
name = "sc-delegation-rs"
version = "0.5.0"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "delegation"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

# elrond-wasm = "0.4.2"
# elrond-wasm-node = "0.4.2"
# elrond-wasm-derive = "0.4.2"

elrond-wasm = { path = "../elrond-wasm-rs/elrond-wasm" }
elrond-wasm-node = { path = "../elrond-wasm-rs/elrond-wasm-node" }
elrond-wasm-derive = { path = "../elrond-wasm-rs/elrond-wasm-derive" }
