[[bin]]
name = "basic-interact"
path = "src/deleg_interact.rs"

[package]
name = "delegation-interact"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
toml = "0.8.6"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.multiversx-sc]
version = "0.51.1"

[dependencies.multiversx-sc-snippets]
version = "0.51.1"

[dependencies.node-storage]
path = "../node-storage"

[dependencies.user-fund-storage]
path = "../user-fund-storage"
