[package]
name = "delegation_latest"
version = "0.5.8"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[dependencies]
hex-literal = "0.4.1"

[dependencies.node-storage]
path = "../node-storage"

[dependencies.user-fund-storage]
path = "../user-fund-storage"

[dependencies.elrond-wasm-modules]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "0d9f4d0ea4df41213a8af34d6b9a65d1fb9cb335"

[dependencies.elrond-wasm]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "0d9f4d0ea4df41213a8af34d6b9a65d1fb9cb335"

[dev-dependencies.elrond-wasm-debug]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "0d9f4d0ea4df41213a8af34d6b9a65d1fb9cb335"
