[package]
name = "delegation_latest"
version = "0.5.9"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2021"

[lib]
path = "src/delegation_main.rs"

[dependencies.node-storage]
path = "../node-storage"

[dependencies.user-fund-storage]
path = "../user-fund-storage"

[dependencies.multiversx-sc-modules]
version = "=0.64.0"

[dependencies.multiversx-sc]
version = "=0.64.0"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.64.0"

[dev-dependencies.auction-mock]
path = "../auction-mock"
