[package]
name = "delegation_latest_full"
version = "0.5.7"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[dependencies.delegation_latest]
path = "../latest"

[dependencies.elrond-wasm]
version = "0.23.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.23.0"

[dev-dependencies.auction-mock]
path = "../auction-mock"
