[package]
name = "delegation_latest_full"
version = "0.5.8"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2018"
[dependencies.delegation_latest]
path = "../latest"

[dependencies.multiversx-sc]
version = "0.39.2"
[dev-dependencies.multiversx-sc-scenario]
version = "0.39.2"

[dev-dependencies.auction-mock]
path = "../auction-mock"
