[package]
name = "delegation_latest_update"
version = "0.5.6"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[features]
wasm-output-mode = [
    "elrond-wasm-node",
    "delegation_latest/wasm-output-mode"
]

[dependencies.delegation_latest]
path = "../latest"

[dependencies.elrond-wasm]
version = "0.17.2"

[dependencies.elrond-wasm-derive]
version = "0.17.2"

[dependencies.elrond-wasm-node]
version = "0.17.2"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.17.2"

[dev-dependencies.auction-mock]
path = "../auction-mock"
