[package]
name = "delegation_latest_update"
version = "0.5.8"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[dependencies.delegation_latest]
path = "../latest"

[dependencies.elrond-wasm]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "0d9f4d0ea4df41213a8af34d6b9a65d1fb9cb335"

[dev-dependencies.elrond-wasm-debug]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "0d9f4d0ea4df41213a8af34d6b9a65d1fb9cb335"

[dev-dependencies.auction-mock]
path = "../auction-mock"
