[package]
name = "staking-mock"
version = "0.1.2"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "wasm"
path = "src/lib.rs"


[dependencies]
elrond-wasm = "0.2.0"
elrond-wasm-node = "0.2.0"
elrond-wasm-derive = "0.2.0"

# elrond-wasm = { path = "../../elrond-wasm-rs/elrond-wasm" }
# elrond-wasm-node = { path = "../../elrond-wasm-rs/elrond-wasm-node" }
# elrond-wasm-derive = { path = "../../elrond-wasm-rs/elrond-wasm-derive" }
