[package]
name = "user-fund-storage"
version = "0.5.5"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies]
elrond-wasm = "0.9.7"
elrond-wasm-derive = "0.9.7"
elrond-wasm-node = { version = "0.9.7", optional = true }

[dev-dependencies]
elrond-wasm-debug = "0.9.7"
