[package]
name = "delegation_v0_5"
version = "0.5.0"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[dependencies]
node-storage = { path = "../node-storage" }
user-fund-storage = { path = "../user-fund-storage" }
elrond-wasm-module-features = "0.6.1"
elrond-wasm-module-pause = "0.6.1"

elrond-wasm = "0.6.1"
elrond-wasm-node = "0.6.1"
elrond-wasm-derive = "0.6.1"

# elrond-wasm = { path = "../../elrond-wasm-rs/elrond-wasm" }
# elrond-wasm-node = { path = "../../elrond-wasm-rs/elrond-wasm-node" }
# elrond-wasm-derive = { path = "../../elrond-wasm-rs/elrond-wasm-derive" }

