[package]
name = "delegation_v0_5_2_full"
version = "0.5.0"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[features]
wasm-output-mode = [
    "elrond-wasm-node",
    "delegation_v0_5_2_wasm"
]

default = [
    "delegation_v0_5_2_default",
]

[dependencies]
delegation_v0_5_2_wasm = { package = "delegation_v0_5_2", path = "../v0_5_2", features = ["wasm-output-mode"], default-features = false, optional = true }
delegation_v0_5_2_default = { package = "delegation_v0_5_2", path = "../v0_5_2", optional = true }

elrond-wasm = "0.9.1"
elrond-wasm-derive = "0.9.1"
elrond-wasm-node = { version = "0.9.1", optional = true }

[dev-dependencies]
auction-mock = { path = "../auction-mock" }
elrond-wasm-debug = "0.9.1"

