[package]
name = "delegation_v0_5_update"
version = "0.5.0"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[features]
wasm-output-mode = [
    "elrond-wasm-node",
    "delegation_v0_5_wasm"
]

default = [
    "delegation_v0_5_default",
]

[dependencies]
delegation_v0_5_wasm = { package = "delegation_v0_5", path = "../v0_5", features = ["wasm-output-mode"], default-features = false, optional = true }
delegation_v0_5_default = { package = "delegation_v0_5", path = "../v0_5", optional = true }

elrond-wasm = "0.7.1"
elrond-wasm-derive = "0.7.1"
elrond-wasm-node = { version = "0.7.1", optional = true }

[dev-dependencies]
elrond-wasm-debug = "0.7.1"
