[package]
name = "delegation_v0_5_x_full"
version = "0.5.0"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[features]
wasm-output-mode = [
    "elrond-wasm-node",
    "delegation_v0_5_x_wasm"
]

default = [
    "delegation_v0_5_x_default",
]

[dependencies]
delegation_v0_5_x_wasm = { package = "delegation_v0_5_x", path = "../v0_5_x", features = ["wasm-output-mode"], default-features = false, optional = true }
delegation_v0_5_x_default = { package = "delegation_v0_5_x", path = "../v0_5_x", optional = true }

elrond-wasm = "0.9.7"
elrond-wasm-derive = "0.9.7"
elrond-wasm-node = { version = "0.9.7", optional = true }

[dev-dependencies]
auction-mock = { path = "../auction-mock" }
elrond-wasm-debug = "0.9.7"

