[package]
name = "auction-mock-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@elrond.com>"]
edition = "2018"
publish = false

[dependencies.auction-mock]
path = ".."

[dependencies.elrond-wasm]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "0d9f4d0ea4df41213a8af34d6b9a65d1fb9cb335"

[dependencies.elrond-wasm-debug]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "0d9f4d0ea4df41213a8af34d6b9a65d1fb9cb335"
