[package]
name = "auction-mock-wasm"
version = "0.2.0"
authors = ["andrei-marinica <andrei_m_marinica@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.auction-mock]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.23.1"

[dependencies.elrond-wasm-output]
version = "0.23.1"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
