[package]
name = "auction-mock-wasm"
version = "0.2.0"
authors = ["andrei-marinica <andrei_m_marinica@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.auction-mock]
path = ".."

[dependencies.elrond-wasm-node]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "0d9f4d0ea4df41213a8af34d6b9a65d1fb9cb335"

[dependencies.elrond-wasm-output]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "0d9f4d0ea4df41213a8af34d6b9a65d1fb9cb335"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
