[package]
name = "delegation-latest-full-abi"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@elrond.com>"]
edition = "2018"
publish = false

[dependencies.delegation_latest_full]
path = ".."

[dependencies.elrond-wasm]
version = "0.28.0"

[dependencies.elrond-wasm-debug]
version = "0.28.0"
