[package]
name = "delegation_latest_full_wasm"
version = "0.2.0"
authors = ["andrei-marinica <andrei_m_marinica@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies]
delegation_latest_full = { path = "..", features=["wasm-output-mode"], default-features = false }
elrond-wasm-output = { version="0.17.2", features=["wasm-output-mode"] }

[workspace]
