[package]
name = "node-storage-debug"
version = "0.1.3"
authors = ["andrei-marinica <andrei_m_marinica@yahoo.com>"]
edition = "2018"

[dependencies]
elrond-wasm = "0.6.0"
elrond-wasm-debug = "0.6.0"

# elrond-wasm = { path = "../../../elrond-wasm-rs/elrond-wasm" }
# elrond-wasm-debug = { path = "../../../elrond-wasm-rs/elrond-wasm-debug" }

node-storage = { path = ".." }
