[package]
name = "delegation_v0_4_1_wasm"
version = "0.2.0"
authors = ["andrei-marinica <andrei_m_marinica@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies]
delegation_v0_4_1 = { path = ".." }
elrond-wasm-output = { version="0.6.0", features=["wasm-output-mode"]}

[workspace]
